Short hop aerial checkbox visibility on % calc fixed

--- a/css/style.css
+++ b/css/style.css
@@ -732,8 +732,8 @@ input, select {
     padding: 2px 4px;
     margin-bottom: 1px;
     font-size: 14px;
-    /*font-family: 'Century Gothic';*/
-    font-weight: 600;
+    /*font-family: 'Century Gothic';
+    font-weight: 600;*/
     border: 0.5px solid black;
 }
 
